fix: Avoid side nav menu items bleeding through the title
Fixes: https://github.com/nodejs/nodejs.dev/issues/190

--- a/src/components/mobile.css
+++ b/src/components/mobile.css
@@ -113,7 +113,7 @@
   }
 
   .side-nav::before {
-    width: 100%;
+    width: 110%;
   }
 
   .side-nav.side-nav--open {
